--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,19 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
-  <mat-grid-list cols="2" rowHeight="350px" >
-    <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
-      <mat-card class="dashboard-card">
-        <mat-card-header>
-          <mat-card-title>
-            {{card.title}}
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-          <div>
-            <h1>5 sessions </h1>
-            <img src="assets/add.png" alt=" sessions ">
-          </div>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+    <h1 class="mat-h1">Dashboard</h1>
+    <mat-grid-list cols="{{ ( cardLayout | async )?.columns }}" rowHeight="200px">
+      <!--Mini Cards-->
+      <mat-grid-tile *ngFor="let i of [1, 2, 3, 4]" [colspan]="( cardLayout | async )?.miniCard.cols"
+        [rowspan]="( cardLayout | async )?.miniCard.rows">
+        <app-card title="Card {{i}}"><div>Mini Card Content Here</div></app-card>
+      </mat-grid-tile>
+      
+      
+      <!--Table-->
+      <mat-grid-tile [colspan]="( cardLayout | async )?.table.cols" [rowspan]="( cardLayout | async )?.table.rows">
+        <app-card title="Latest Orders">
+          <app-orders-table></app-orders-table>
+        </app-card>
+     </mat-grid-tile>
+    </mat-grid-list>
+    
+   </div>
