--- a/src/app/formateurs/formateurs/formateur.component.css
+++ b/src/app/formateurs/formateurs/formateur.component.css
@@ -1,26 +1,23 @@
+table {
+  background-color: #32435b;
+  border: 4px solid #c1437a;
+  width: 100%;
+  text-align: center;
+}
 
-  
-  table{
-    background-color: #32435b;
-    border:4px solid #C1437A;
-    width: 100%;
-    text-align: center;
-  }
+table td {
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+  border: 4px solid #c1437a;
+}
 
-  table td{
-    position: relative;
-    font-size: 15px;
-    font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
-    border:4px solid #C1437A;
-  }
-
-  div {
-    background-color: #32435b;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    glyph-orientation-horizontal: middle;
-
-  }
+div {
+  background-color: #32435b;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  glyph-orientation-horizontal: middle;
+}
