--- a/src/app/formateurs/formateurs/formateur.component.html
+++ b/src/app/formateurs/formateurs/formateur.component.html
@@ -1,73 +1,25 @@
-
 <div>
-    <table>
-        <tr> 
-            <td>Liste des formateurs</td>
-            <td>
-                <a routerLink="./add" routerLinkActive="active">
-                    <img src="assets/add.png" class="icon" />
-                </a>
-            </td>
-            <td>
-                <a routerLink="./add" routerLinkActive="active">
-                    <img src="assets/add.png" class="icon" />
-                </a>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Ghachem, eya , aaouina , informatique, ghahcemeya12@gmail.com
-            </td>
-            <td>
-                <a routerLink="./add">
-                  
-                <img src="assets/edit.png" alt="modifier un formateur">
-                </a>
-            </td>
-            <td>
-                <a routerLink="./add"> 
-                    <img src="assets/list.png" alt="delete un formateur">
-                </a>
-            </td>
-    
-        </tr>
-        <tr>
-            <td>
-                Ghachem, eya , aaouina , informatique, ghahcemeya12@gmail.com
-            </td>
-            <td>
-                <a routerLink="./add">
-                  
-                <img src="assets/edit.png" alt="modifier un formateur">
-                </a>
-            </td>
-            <td>
-                <a routerLink="./add"> 
-                    <img src="assets/list.png" alt="delete un formateur">
-                </a>
-            </td>
-    
-        </tr>
-        <tr>
-            <td>
-                Ghachem, eya , aaouina , informatique, ghahcemeya12@gmail.com
-            </td>
-            <td>
-                <a routerLink="./addformateur">
-                  
-                <img src="assets/edit.png" alt="modifier un formateur">
-                </a>
-            </td>
-            <td>
-                <a routerLink="./addformateur"> 
-                    <img src="assets/list.png" alt="delete un formateur">
-                </a>
-            </td>
-    
-        </tr>
-    </table>
+  <table>
+    <tr>
+      <td>Liste des formateurs</td>
+      <td>
+        <a routerLink="./add" routerLinkActive="active">
+          <img src="assets/actualiser.png" class="icon" />
+        </a>
+      </td>
+      <td>
+        <a routerLink="./add" routerLinkActive="active">
+          <img src="assets/add.png" class="icon" />
+        </a>
+      </td>
+    </tr>
+
+    <app-formateur-item
+      *ngFor="let formateurItem of formateurItems"
+      [formateur]="formateurItem"
+      ><tr></tr>
+    </app-formateur-item>
+  </table>
 </div>
 
 <router-outlet></router-outlet>
-
-
