--- a/src/app/formateurs/add-formateur/add-formateur.component.html
+++ b/src/app/formateurs/add-formateur/add-formateur.component.html
@@ -1,45 +1,31 @@
 <header>
-    <h2>Ajouter une session de formation</h2>
-  </header>
-  <form >
-    <ul>
-      <li>
-        <label for="name">Name</label>
-        <select name="name" id="name" ngModel required>
-          <option value="Web">Web</option>
-          <option value="Mobile">Mobile</option>
-        </select>
-      </li>
-      <li>
-        <label for="track">Track</label>
-        <select name="track" id="track" ngModel>
-          <option value="MEAN">MEAN Stack</option>
-  <option value="Angular">Angular</option>
-  <option value="NodeJS">NodeJS</option>
-  <option value="Symphony">Symphony</option>
-  <option value="Laravel">Laravel</option>
-  <option value="Ionic">Ionic</option>
-  <option value="Android">Android</option>
-  <option value="Xamarin">Xamarin</option>
-  <option value="Swift">Swift</option>
-        
-        </select>
-      </li>
-      <i>
-        <label for="date">Date</label>
-      <input type="date" name="date" id="date" ngModel required>
-        <label for="duree">Days</label>
-        <input type="number" name="duree" id="duree" ngModel required>
-      </i>
-      <i>
-      <label for=" adress ">Location</label>
-      <input type="text" name="adress" id=" adress " ngModel required>
-      </i>
-      <i>
-      <label for="participants">Participants</label>
-      <input type="number" name="participants" id="participants"  ngModel required>
-      </i>
-    </ul>
-    <button type="submit" >Enregistrer</button>
-  </form>
-  
+  <h2>Ajouter un formateur</h2>
+</header>
+<form
+  #formateurItemForm="ngForm"
+  (ngSubmit)="addformateur(formateurItemForm.value)"
+>
+  <ul>
+    <li>
+      <label for="name">Name</label>
+      <input type="text" id="name" required name="name" ngModel />
+    </li>
+    <li>
+      <label for="lastname">lastname</label>
+      <input type="text" id="lastname" required name="lastname" ngModel />
+    </li>
+    <li>
+      <label for="adress">adress</label>
+      <input type="text" id="adress" required name="adress" ngModel />
+    </li>
+    <li>
+      <label for="domaine">domaine</label>
+      <input type="text" id="domaine" required name="domaine" ngModel />
+    </li>
+    <li>
+      <label for="email">email</label>
+      <input type="email" id="email" required name="email" ngModel />
+    </li>
+  </ul>
+  <button type="submit">Enregistrer</button>
+</form>
