--- a/src/app/formateurs/formateurs/formateur.component.html
+++ b/src/app/formateurs/formateurs/formateur.component.html
@@ -3,12 +3,12 @@
     <tr>
       <td>Liste des formateurs</td>
       <td>
-        <a routerLink="./add" routerLinkActive="active">
+        <a (click)="refresh()">
           <img src="assets/actualiser.png" class="icon" />
         </a>
       </td>
       <td>
-        <a routerLink="./add" routerLinkActive="active">
+        <a routerLink="./addformateur" routerLinkActive="active">
           <img src="assets/add.png" class="icon" />
         </a>
       </td>
