--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,7 +18,7 @@
       <a mat-list-item routerLink="/dashboard">Chercher Session </a>
       <a mat-list-item routerLink="/admin">Sessions</a>
       <a mat-list-item routerLink="/formateur">Formateurs</a>
-      <a mat-list-item routerLink="/participants">Participants</a>
+      <a mat-list-item routerLink="/participant">Participants</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
