--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,11 +8,11 @@
   >
     <mat-toolbar color="primary">
       <img
-        src="assets/espaceadmin.JPG"
+        src="assets/nav bar.png"
         alt="espace admin"
-        style="width: 40px; height: 40px; margin-right: 10px; position: left"
+        style="width: 70px; height: 50px; position: left"
       />
-      Espace admin
+     <h3 style="font-size: 14px; font-weight: blod;"> Espace admin</h3>
     </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard">Chercher Session </a>
@@ -33,7 +33,8 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
 
-      <span style="margin: 1100px; font-size: 15px">
+      <span style=" display: flex; 
+      justify-content: space-between; flex: 1; font-size: 15px">
         {{ test }} - Tunis
         <img
           src="assets/deconnect.png"
