--- a/src/app/participants/participant-item/participant-item.component.css
+++ b/src/app/participants/participant-item/participant-item.component.css
@@ -1,14 +1,15 @@
-.table-particpant-element td {
-    position: relative;
-    font-size: 15px;
-    font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
-    border: 4px solid #c1437a;
-    vertical-align: inherit;
-    width: 100%;
-  }
-  .table-participant-element {
-    width: 100%;
-  }
-  
+.table-participant-element td {
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: black;
+  background-color: #72b0ea;
+  border: 1px solid #fafafa;
+  vertical-align: inherit;
+  width: 100%;
+  text-align: center;
+}
+.table-participant-element {
+  width: 100%;
+}
