--- a/src/app/formateurs/formateurs/formateur.component.css
+++ b/src/app/formateurs/formateurs/formateur.component.css
@@ -1,6 +1,6 @@
 table {
-  background-color: #32435b;
-  border: 4px solid #c1437a;
+  background-color:white;
+
   width: 100%;
   text-align: center;
 }
@@ -10,14 +10,12 @@ table td {
   font-size: 15px;
   font-weight: bold;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: white;
-  border: 4px solid #c1437a;
+  color: black;
+  background-color: #2764ce;
+ 
+  
 }
 
-div {
-  background-color: #32435b;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 20px;
-  glyph-orientation-horizontal: middle;
+section {
+  background-color: white;
 }
