--- a/src/app/formateurs/formateurs/formateur.component.html
+++ b/src/app/formateurs/formateurs/formateur.component.html
@@ -1,17 +1,13 @@
-<div>
+<section>
+  <a (click)="refresh()">
+    <img src="assets/actualiser.png" class="icon" style="margin-left: 10px;" />
+  </a>
+  <a routerLink="./addformateur" routerLinkActive="active">
+    <img src="assets/add.png" class="icon" />
+  </a>
   <table>
     <tr>
       <td>Liste des formateurs</td>
-      <td>
-        <a (click)="refresh()">
-          <img src="assets/actualiser.png" class="icon" />
-        </a>
-      </td>
-      <td>
-        <a routerLink="./addformateur" routerLinkActive="active">
-          <img src="assets/add.png" class="icon" />
-        </a>
-      </td>
     </tr>
 
     <app-formateur-item
@@ -20,6 +16,6 @@
       ><tr></tr>
     </app-formateur-item>
   </table>
-</div>
+</section>
 
 <router-outlet></router-outlet>
