--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -10,3 +10,24 @@
   position: sticky;
   top: 0;
 }
+
+mat-nav-list {
+  background-color:#3f51b5;
+}
+
+mat-sidenav{
+  background-color: #3f51b5;
+}
+
+mat-nav-list a {
+  color: white;
+  border-bottom: 1px;
+  border-collapse: separate;
+  border-style: ridge;
+}
+
+.icon{
+  width: 48px;
+  height: 48px;
+  margin: 10px;
+}
