--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,10 +15,23 @@
      <h3 style="font-size: 14px; font-weight: blod;"> Espace admin</h3>
     </mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/dashboard">Chercher Session </a>
-      <a mat-list-item routerLink="/admin">Sessions</a>
-      <a mat-list-item routerLink="/formateur">Formateurs</a>
-      <a mat-list-item routerLink="/participant">Participants</a>
+      <a  mat-list-item routerLink="/dashboard">
+        <img src="assets/rechercher.png" class="icon" />
+        Rechercher session 
+      </a>
+      <a  mat-list-item routerLink="/dashboard">
+        <img src="assets/dashbord3.png" class="icon" />
+        Dashboard
+      </a>
+      <a mat-list-item routerLink="/admin">
+        <img src="assets/dashbord2.png" class="icon" />
+        Sessions</a>
+      <a mat-list-item routerLink="/formateur">
+        <img src="assets/dashbord2.png" class="icon" />
+        Formateurs</a>
+      <a mat-list-item routerLink="/participant">
+        <img src="assets/dashbord2.png" class="icon" />
+        Participants</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
