--- a/src/app/participants/participants/participant/participant.component.css
+++ b/src/app/participants/participants/participant/participant.component.css
@@ -1,24 +1,19 @@
 table {
-    background-color: #32435b;
-    border: 4px solid #c1437a;
-    width: 100%;
-    text-align: center;
-  }
-  
-  table td {
-    position: relative;
-    font-size: 15px;
-    font-weight: bold;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
-    border: 4px solid #c1437a;
-  }
-  
-  div {
-    background-color: #32435b;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    glyph-orientation-horizontal: middle;
-  }
-  
+  background-color: #72b0ea;
+  width: 100%;
+  text-align: center;
+  border: 1px solid #fafafa;
+}
+
+table td {
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: black;
+  background-color: #2764ce;
+}
+
+section {
+  background-color: white;
+}
