--- a/src/app/formateurs/edit-formateur/edit-formateur.component.css
+++ b/src/app/formateurs/edit-formateur/edit-formateur.component.css
@@ -1,6 +1,7 @@
 :host {
     display: block;
     padding: 10px;
+    background-color: #29394b;
   }
   ul {
     list-style-type: none;
@@ -50,3 +51,8 @@
     color: #666;
     cursor: default;
   }
+
+  form{
+    background-color: #29394b;
+  }
+
