--- a/src/app/participants/participant-item/participant-item.component.html
+++ b/src/app/participants/participant-item/participant-item.component.html
@@ -1,4 +1,4 @@
-<table class="table-particpant-element">
+<table class="table-formateur-element">
     <tr>
       <td>
         {{ participant.lastname }}, {{ participant.name }} , {{ participant.adress }} ,
