--- a/src/app/participants/participant-item/participant-item.component.css
+++ b/src/app/participants/participant-item/participant-item.component.css
@@ -1,4 +1,5 @@
-.table-participant-element td {
+
+.table-formateur-element td {
   position: relative;
   font-size: 15px;
   font-weight: bold;
@@ -8,8 +9,7 @@
   border: 1px solid #fafafa;
   vertical-align: inherit;
   width: 100%;
-  text-align: center;
 }
-.table-participant-element {
+.table-formateur-element {
   width: 100%;
 }
