recherche formation fonctionnelle

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
      <h3 style="font-size: 14px; font-weight: blod;"> Espace admin</h3>
     </mat-toolbar>
     <mat-nav-list>
-      <a  mat-list-item routerLink="/dashboard">
+      <a  mat-list-item routerLink="/rechercher">
         <img src="assets/rechercher.png" class="icon" />
         Rechercher session 
       </a>
