--- a/src/app/participants/participants/participant/participant.component.css
+++ b/src/app/participants/participants/participant/participant.component.css
@@ -16,6 +16,34 @@ table td {
   
 }
 
+
+:host {
+  display: flex;
+  min-height: 90vh;
+  flex-direction: column;
+  padding: 10px;
+}
+header {
+  color: #ffffff;
+  padding: 10px;
+}
+header > h1 {
+  font-size: 2em;
+}
 section {
-  background-color: white;
+  flex: 1;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+}
+section > app-session-item {
+  margin: 10px;
+}
+footer {
+  text-align: right;
+}
+footer .icon {
+  width: 64px;
+  height: 64px;
+  margin: 15px;
 }
