final commit avant backend

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -3,10 +3,10 @@
     <img src="assets/list.png" class="icon" />
     </a>
     <a routerLink="./add" routerLinkActive="active">
-    <img src="assets/add.png" class="icon" />
+    <img src="assets/add1 (1).png" class="icon" />
     </a>
     <a [routerLink]="['./edit', 1]" routerLinkActive="active">
-    <img src="assets/edit.png" class="icon" />
+    <img src="assets/edit2.png" class="icon" />
     </a>
     </nav>
     <section>
