--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -49,11 +49,9 @@
       <span style=" display: flex; 
       justify-content: space-between; flex: 1; font-size: 15px">
         {{ test }} - Tunis
-        <img
-          src="assets/deconnect.png"
-          alt="espace admin"
-          style="width: 40px; height: 40px; margin-top: 10px; margin-left: 10px"
-        />
+        <a routerLink="/list" routerLinkActive="active">
+          <img src="assets/deconnect.png" class="icon" />
+          </a>
       </span>
     </mat-toolbar>
     <!-- Add Content Here -->
