--- a/src/app/session-item-list/session-item-list.component.html
+++ b/src/app/session-item-list/session-item-list.component.html
@@ -11,4 +11,10 @@ sessionItems" [session]="sessionItem"
 sessionItem.name === 'Web', 'session-mobile':
 sessionItem.name === 'Mobile'}">
 </app-session-item>
+
 </section>
+<footer>
+    <a routerLink="/admin" routerLinkActive="active">
+    <img src="assets/admin3.png" class="icon" />
+    </a>
+    </footer>
