--- a/src/app/session-item-list/session-item-list.component.css
+++ b/src/app/session-item-list/session-item-list.component.css
@@ -3,6 +3,7 @@
     min-height: 90vh;
     flex-direction: column;
     padding: 10px;
+    background-color:#29394b ;
     }
     header {
     color: #0e0d0d;
@@ -10,9 +11,11 @@
     }
     header > h1 {
     font-size: 2em;
+    color : white;
     }
     header .description {
     font-style: italic;
+    color : white;
     }
     section {
     flex: 1;
