--- a/src/app/admin/session-edit-form/session-edit-form.component.css
+++ b/src/app/admin/session-edit-form/session-edit-form.component.css
@@ -1,6 +1,7 @@
 :host {
   display: block;
   padding: 10px;
+  min-height: 91vh;
 }
 ul {
   list-style-type: none;
@@ -8,15 +9,18 @@ ul {
 ul li {
   margin: 10px 0;
 }
-header, label {
+header,
+label {
   color: #53ace4;
 }
-input, select {
+input,
+select {
   background-color: #29394b;
   color: #c6c5c3;
   border-radius: 3px;
   border: none;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset, 0 -1px 0 rgba(0,0,0,0.05) inset;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset,
+    0 -1px 0 rgba(0, 0, 0, 0.05) inset;
   border-color: #53ace4;
   padding: 6px;
 }
@@ -36,7 +40,7 @@ input[required].ng-invalid:not(.required-invalid) {
 #year {
   width: 50px;
 }
-button[type=submit] {
+button[type="submit"] {
   background-color: #45bf94;
   border: 0;
   padding: 10px;
@@ -45,7 +49,7 @@ button[type=submit] {
   color: #ffffff;
   cursor: pointer;
 }
-button[type=submit]:disabled {
+button[type="submit"]:disabled {
   background-color: #333;
   color: #666;
   cursor: default;
